--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -1,7 +1,28 @@
-* xref:01-setup.adoc[1. Setup]
-** xref:01-setup.adoc#prerequisite[Prerequisites]
-** xref:01-setup.adoc#minikube[Setup Minikube]
+include::pages/_attributes.adoc[]
 
-* xref:02-deploy.adoc[2. Deploy Service]
-** xref:02-deploy.adoc#package[Build Service]
-** xref:02-deploy.adoc#deploy[Deploy Dervice]
+* xref:01-setup-tools.adoc[Setup Tools]
+** xref:01-setup-tools.adoc#resources[Resources]
+** xref:01-setup-tools.adoc#prerequisite[Prerequisites]
+//** xref:01-setup-tools.adoc#minikube[Setup Minikube]
+
+
+* xref:02-setup-project.adoc[Setup Project]
+** xref:02-setup-project.adoc#login-to-registry[Login to registry]
+** xref:02-setup-project.adoc#define-envvars[Define environment variables]
+** xref:02-setup-project.adoc#create-project-folder[Create the operator project]
+** xref:02-setup-project.adoc#setup-python-venv[Setup a Python virtual environment]
+
+* xref:03-building-your-1st-operator.adoc[Building your 1st operator]
+** xref:03-building-your-1st-operator.adoc#setup-environment[Set up the environment]
+
+* xref:04-deploying-your-operator-manually.adoc[Deploy your operator manually]
+** xref:04-deploying-your-operator-manually.adoc[XYZ]
+
+* xref:05-running-your-operator-locally.adoc[Running your operator locally]
+** xref:05-running-your-operator-locally.adoc[XYZ]
+
+* xref:06-deploying-your-operator-using-olm.adoc[Deploy your operator with the Operator Lifecycle Manager]
+** xref:06-deploying-your-operator-using-olm.adoc[XYZ]
+
+* xref:07-evolving-your-operator.adoc[Evolving your operator]
+** xref:07-evolving-your-operator.adoc[XYZ]
