--- a/documentation/modules/ROOT/nav.adoc
+++ b/documentation/modules/ROOT/nav.adoc
@@ -10,19 +10,44 @@ include::pages/_attributes.adoc[]
 ** xref:02-setup-project.adoc#login-to-registry[Login to registry]
 ** xref:02-setup-project.adoc#define-envvars[Define environment variables]
 ** xref:02-setup-project.adoc#create-project-folder[Create the operator project]
-** xref:02-setup-project.adoc#setup-python-venv[Setup a Python virtual environment]
 
 * xref:03-building-your-1st-operator.adoc[Building your 1st operator]
-** xref:03-building-your-1st-operator.adoc#setup-environment[Set up the environment]
+** xref:03-building-your-1st-operator.adoc#create-operator-scaffold[Create the operator scaffold]
+** xref:03-building-your-1st-operator.adoc#create-an-api[Create an API]
+** xref:03-building-your-1st-operator.adoc#setup-python-venv[Setup a Python venv]
+** xref:03-building-your-1st-operator.adoc#init-repo[Init the git repo]
+** xref:03-building-your-1st-operator.adoc#enhance-your-makefile[Enhance your Makefile]
+** xref:03-building-your-1st-operator.adoc#configuring-operator[Configuring operator]
+*** xref:03-building-your-1st-operator.adoc#adding-permissions-on-configmaps[Adding permissions]
+*** xref:03-building-your-1st-operator.adoc#updating-categories[Updating categories]
+*** xref:03-building-your-1st-operator.adoc#updating-install-modes[Updating install modes]
+** xref:03-building-your-1st-operator.adoc#coding-0.0.1[Coding v0.0.1]
+*** xref:03-building-your-1st-operator.adoc#adding-actual-code[Adding Actual Code]
+*** xref:03-building-your-1st-operator.adoc#defining-crd[Defining the CRD (API)]
 
 * xref:04-deploying-your-operator-manually.adoc[Deploy your operator manually]
-** xref:04-deploying-your-operator-manually.adoc[XYZ]
+** xref:04-deploying-your-operator-manually.adoc#running-as-a-deployment[Running as a deployment]
+** xref:04-deploying-your-operator-manually.adoc#checking-out-the-deployment[Checking out the deployment]
+** xref:04-deploying-your-operator-manually.adoc#create-a-cr[Create an instance of our CR]
 
 * xref:05-running-your-operator-locally.adoc[Running your operator locally]
-** xref:05-running-your-operator-locally.adoc[XYZ]
 
 * xref:06-deploying-your-operator-using-olm.adoc[Deploy your operator with the Operator Lifecycle Manager]
-** xref:06-deploying-your-operator-using-olm.adoc[XYZ]
+** xref:06-deploying-your-operator-using-olm.adoc#create-a-bunde-and-image[Create a bundle and its corresponding image]
+** xref:06-deploying-your-operator-using-olm.adoc#create-bundle-index[Creating the Bundle Index]
+** xref:06-deploying-your-operator-using-olm.adoc#install-olm[Install OLM]
+** xref:06-deploying-your-operator-using-olm.adoc#deploy-catalog-source[Deploy a CatalogSource pointing to Bundle Index 0.0.1]
+** xref:06-deploying-your-operator-using-olm.adoc#catalogsource-testing[CatalogSource Testing]
+** xref:06-deploying-your-operator-using-olm.adoc#install-operator-with-kubectl-plugin[Install your operator with a kubectl plugin]
+** xref:06-deploying-your-operator-using-olm.adoc#create-cr[Create an {crd_name} CR]
 
 * xref:07-evolving-your-operator.adoc[Evolving your operator]
-** xref:07-evolving-your-operator.adoc[XYZ]
+** xref:07-evolving-your-operator.adoc#updating-the-code[Updating the code]
+** xref:07-evolving-your-operator.adoc#testing-the-new-code[Testing the new code]
+** xref:07-evolving-your-operator.adoc#running-as-normal-deployment[Running v0.0.2 as a normal deployment]
+** xref:07-evolving-your-operator.adoc#create-new-bundle[Create a new operator bundle and it’s corresponding image for version `0.0.2`]
+** xref:07-evolving-your-operator.adoc#create-and-push-new-bundle-index[Create and push the new Bundle Index (`0.0.2`)]
+** xref:07-evolving-your-operator.adoc#update-catalog-source[Update the CatalogSource to point to the new Bundle Index]
+*** xref:07-evolving-your-operator.adoc#final-tests[Final tests]
+
+* xref:08-annexes.adoc[Annexes]
