--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -85,46 +85,60 @@ guide. I just compiled the steps in that guide and simplified some things. I hop
 == Browse modules
 
 [.tile]
-xref:01-setup.adoc[Get Started]
-//* xref:01-setup.adoc#minikube[Minikube]
+* xref:01-setup-tools.adoc[Setup Tools]
+** xref:01-setup-tools.adoc#resources[Resources]
+** xref:01-setup-tools.adoc#prerequisite[Prerequisites]
+//** xref:01-setup-tools.adoc#minikube[Setup Minikube]
 
 [.tile]
-.xref:02-building-your-1st-operator.adoc[Building your 1st {operator_type} operator]
-* xref:02a-spring-boot-common.adoc#the-code[Common]
-** xref:02a-spring-boot-common.adoc#the-code[The code]
-** xref:02a-spring-boot-common.adoc#maven-profiles[Maven Profiles]
-** xref:02a-spring-boot-common.adoc#run-local[Running the code locally against H2]
-* xref:02b-spring-boot-deploy-postgresql.adoc[Using PostgreSQL as Database]
-*** xref:02b-spring-boot-deploy-postgresql.adoc#deploy-database[Deploying PostgreSQL Database]
-*** xref:02b-spring-boot-deploy-postgresql.adoc#deploy-code[Deploying the code]
-*** xref:02b-spring-boot-deploy-postgresql.adoc#run-local-telepresence[Extending the inner-loop with Telepresence]
-*** xref:02b-spring-boot-deploy-postgresql.adoc#binary-deploy[Binary deploy S2I]
-* xref:02c-spring-boot-deploy-oracle.adoc[Using Oracle as Database]
-*** xref:02c-spring-boot-deploy-oracle.adoc#deploy-database[Deploying Oracle RDBMS]
-*** xref:02c-spring-boot-deploy-oracle.adoc#deploy-code[Deploying the code]
-*** xref:02c-spring-boot-deploy-oracle.adoc#run-local-telepresence[Extending the inner-loop with Telepresence]
-*** xref:02c-spring-boot-deploy-oracle.adoc#binary-deploy[Binary deploy S2I]
+* xref:02-setup-project.adoc[Setup Project]
+** xref:02-setup-project.adoc#login-to-registry[Login to registry]
+** xref:02-setup-project.adoc#define-envvars[Define environment variables]
+** xref:02-setup-project.adoc#create-project-folder[Create the operator project]
 
 [.tile]
-.xref:03a-quarkus-common.adoc[Quarkus Inner-Loop Development]
-* xref:03a-quarkus-common.adoc#the-code[Common]
-** xref:03a-quarkus-common.adoc#the-code[The code]
-** xref:03a-quarkus-common.adoc#maven-profiles[Maven Profiles]
-** xref:03a-quarkus-common.adoc#run-local[Running the code locally against H2]
-* xref:03b-quarkus-deploy-postgresql.adoc[Using PostgreSQL as Database]
-*** xref:03b-quarkus-deploy-postgresql.adoc#deploy-database[Deploying PostgreSQL Database]
-*** xref:03b-quarkus-deploy-postgresql.adoc#deploy-code[Deploying the code]
-*** xref:03b-quarkus-deploy-postgresql.adoc#run-local-telepresence[Extending the inner-loop with Telepresence]
-*** xref:03b-quarkus-deploy-postgresql.adoc#binary-deploy[Binary deploy S2I]
-* xref:03c-quarkus-deploy-oracle.adoc[Using Oracle as Database]
-*** xref:03c-quarkus-deploy-oracle.adoc#deploy-database[Deploying Oracle RDBMS]
-*** xref:03c-quarkus-deploy-oracle.adoc#deploy-code[Deploying the code]
-*** xref:03c-quarkus-deploy-oracle.adoc#run-local-telepresence[Extending the inner-loop with Telepresence]
-*** xref:03c-quarkus-deploy-oracle.adoc#binary-deploy[Binary deploy S2I]
+* xref:03-building-your-1st-operator.adoc[Building your 1st operator]
+** xref:03-building-your-1st-operator.adoc#create-operator-scaffold[Create the operator scaffold]
+** xref:03-building-your-1st-operator.adoc#create-an-api[Create an API]
+** xref:03-building-your-1st-operator.adoc#setup-python-venv[Setup a Python venv]
+** xref:03-building-your-1st-operator.adoc#init-repo[Init the git repo]
+** xref:03-building-your-1st-operator.adoc#enhance-your-makefile[Enhance your Makefile]
+** xref:03-building-your-1st-operator.adoc#configuring-operator[Configuring operator]
+*** xref:03-building-your-1st-operator.adoc#adding-permissions-on-configmaps[Adding permissions]
+*** xref:03-building-your-1st-operator.adoc#updating-categories[Updating categories]
+*** xref:03-building-your-1st-operator.adoc#updating-install-modes[Updating install modes]
+** xref:03-building-your-1st-operator.adoc#coding-0.0.1[Coding v0.0.1]
+*** xref:03-building-your-1st-operator.adoc#adding-actual-code[Adding Actual Code]
+*** xref:03-building-your-1st-operator.adoc#defining-crd[Defining the CRD (API)]
 
-== Part One: Create and Upgrade and Operator using https://github.com/operator-framework/operator-lifecycle-manager[OLM]
+[.tile]
+* xref:04-deploying-your-operator-manually.adoc[Deploy your operator manually]
+** xref:04-deploying-your-operator-manually.adoc#running-as-a-deployment[Running as a deployment]
+** xref:04-deploying-your-operator-manually.adoc#checking-out-the-deployment[Checking out the deployment]
+** xref:04-deploying-your-operator-manually.adoc#create-a-cr[Create an instance of our CR]
 
-…
+[.tile]
+* xref:05-running-your-operator-locally.adoc[Running your operator locally]
 
+[.tile]
+* xref:06-deploying-your-operator-using-olm.adoc[Deploy your operator with the Operator Lifecycle Manager]
+** xref:06-deploying-your-operator-using-olm.adoc#create-a-bunde-and-image[Create a bundle and its corresponding image]
+** xref:06-deploying-your-operator-using-olm.adoc#create-bundle-index[Creating the Bundle Index]
+** xref:06-deploying-your-operator-using-olm.adoc#install-olm[Install OLM]
+** xref:06-deploying-your-operator-using-olm.adoc#deploy-catalog-source[Deploy a CatalogSource pointing to Bundle Index 0.0.1]
+** xref:06-deploying-your-operator-using-olm.adoc#catalogsource-testing[CatalogSource Testing]
+** xref:06-deploying-your-operator-using-olm.adoc#install-operator-with-kubectl-plugin[Install your operator with a kubectl plugin]
+** xref:06-deploying-your-operator-using-olm.adoc#create-cr[Create an {crd_name} CR]
 
+[.tile]
+* xref:07-evolving-your-operator.adoc[Evolving your operator]
+** xref:07-evolving-your-operator.adoc#updating-the-code[Updating the code]
+** xref:07-evolving-your-operator.adoc#testing-the-new-code[Testing the new code]
+** xref:07-evolving-your-operator.adoc#running-as-normal-deployment[Running v0.0.2 as a normal deployment]
+** xref:07-evolving-your-operator.adoc#create-new-bundle[Create a new operator bundle and it’s corresponding image for version `0.0.2`]
+** xref:07-evolving-your-operator.adoc#create-and-push-new-bundle-index[Create and push the new Bundle Index (`0.0.2`)]
+** xref:07-evolving-your-operator.adoc#update-catalog-source[Update the CatalogSource to point to the new Bundle Index]
+*** xref:07-evolving-your-operator.adoc#final-tests[Final tests]
 
+[.tile]
+* xref:08-annexes.adoc[Annexes]
